# simple-renderer

./: CMakeLists.txt  README.md  app.rc
assets/: icon.ase
include/: Cube.h  CubeScene3D.h
src/: Cube.cpp  CubeScene3D.cpp  Main.cpp
